cmake_minimum_required(VERSION 3.9)
project(Knowledge)

set(CMAKE_CXX_STANDARD 11)

add_executable(Knowledge
        interview/cpp/001.c
        interview/cpp/002.c
        interview/cpp/003.c
        interview/cpp/004.c
        interview/cpp/005.c
        interview/cpp/006.c
        interview/cpp/007.c
        interview/cpp/008.c
        interview/cpp/009.c
        interview/cpp/010.c
        interview/cpp/011.c
        interview/cpp/012.c
        interview/cpp/013.c
        interview/cpp/014.c
        interview/cpp/015.c
        interview/cpp/016.c
        interview/cpp/017.c
        interview/cpp/018.c
        interview/cpp/019.c
        interview/cpp/020.c
        interview/cpp/021.c
        interview/cpp/022.c
        interview/cpp/023.c
        interview/cpp/024.c
        interview/cpp/025.c
        interview/cpp/026.c
        interview/cpp/027.c
        interview/cpp/028.c
        interview/cpp/029.c
        interview/cpp/030.c
        interview/cpp/031.c
        interview/cpp/032.c
        interview/cpp/033.c
        interview/cpp/034.c
        interview/cpp/035.c
        interview/cpp/036.cpp
        interview/cpp/037.c
        interview/cpp/038.c
        interview/cpp/039.c
        interview/cpp/040.c
        interview/cpp/041.c
        interview/cpp/042.c
        interview/cpp/043.c
        interview/cpp/044.cpp
        interview/cpp/045.c
        interview/cpp/046.cpp
        interview/cpp/047.cpp
        interview/cpp/048.cpp
        interview/cpp/049.cpp
        interview/cpp/050.cpp
        interview/cpp/051.cpp
        interview/cpp/052.c
        interview/cpp/053.c
        interview/cpp/054.c
        interview/data/1.1.md
        interview/data/1.2.md
        interview/data/1.3.md
        interview/data/2.1.md
        interview/README.md)
